--- a/css/style.css
+++ b/css/style.css
@@ -224,9 +224,87 @@ nav ul li a:hover{
 }
 #PrioritiesSec ul{
   list-style: none;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5%;
 }
 #PrioritiesSec ul li{
-  margin: 10px;
+  margin: 15px;
   display: inline-block;
-  background-color: rgba(0, 0, 0, .5);;
+  background-color: rgba(0, 0, 0, .6);
+  height: auto;
+  width: 300px;
+  padding: 0 4%;
+}
+#PrioritiesSec ul li h4{
+  color: white;
+  font-weight: 600;
+  font-size: 16px;
+  text-align: center;
+  margin-top: 20%;
+}
+#PrioritiesSec ul li .text{
+  color: #E4E4E4;
+  font-size: 14px;
+  vertical-align: middle;
+  margin: 15% 0%;
+}
+#PrioritiesSec ul li h5{
+  color: white;
+  font-weight: 600;
+  font-size: 13px;
+  text-align: center;
+  vertical-align: bottom;
+}
+#PrioritiesSec ul li .posada{
+  color: #E4E4E4;
+  font-size: 14px;
+  vertical-align: middle;
+  margin-bottom: 20%;
+  margin-top: 0;
+}
+
+/* ==============WhatExactlySec(Section-5)============== */
+#WhatExactlySec{
+  background-color: #000000;
+  padding: 5% 20%;
+}
+#WhatExactlySec h2{
+  color: #00C8FF;
+  font-family: Raleway-Regular;
+  text-align: center;
+  font-weight: 400;
+}
+#WhatExactlySec span{
+  color: #009CC7;
+  text-align: center;
+  margin-top: 30px;
+  display: block;
+  line-height: 30px;
+}
+#WhatExactlySec ul{
+  list-style: none;
+  height: 100%;
+  width: auto;
+  display: flex;
+  position: relative;
+  margin: auto;
+}
+#WhatExactlySec ul li{
+  display: inline-block;
+}
+#WhatExactlySec ul li a{
+  text-align: center;
+  text-decoration: none;
+  color: #009CC7;
+  display: block;
+  padding: 10px 45px;
+  transition: 0.3s;
+  font-size: 15px;
+}
+#WhatExactlySec ul li a:hover{
+  background-color: #A9A9A9;
+  color: white;
+  border-radius: 15px;
+  font-weight: 500;
 }
