--- a/css/style.css
+++ b/css/style.css
@@ -410,3 +410,62 @@ nav ul li a:hover{
   margin-left: 20%;
   margin-right: 10%;
 }
+/* ==============BuyTicketSec(Section-8)============== */
+#BuyTicketSec{
+  background-image: url(../images/foto4.jpg);
+  background-repeat: no-repeat;
+  padding-top: 16%;
+  padding-bottom: 10%;
+  width: 100%;
+  background-size: cover;
+  position: relative;
+}
+#BuyTicketSec .content{
+
+}
+#BuyTicketSec span{
+  width: 43%;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  text-align: center;
+  color: white;
+  margin-top: 3%;
+  font-size: 18px;
+  z-index: 4;
+  position: relative;
+  opacity: 80%;
+}
+#BuyTicketSec div{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: 35%;
+  z-index: 1;
+  top: 0;
+}
+
+#BuyTicketSec button{
+  background-color: white;
+  opacity: 85%;
+  padding: 10px 45px;
+  border-radius: 18px;
+  z-index: 4;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  border: 0;
+  font-size: 18px;
+  color: #01C5FF;
+  font-family: Raleway-Bold;
+  margin-top: 5%;
+  transition: 0.3s;
+  cursor: pointer;
+}
+#BuyTicketSec button:hover{
+  background-color: #01C5FF;
+  color: white;
+  box-shadow: 0px 0px 10px #01C5FF;
+}
