--- a/css/style.css
+++ b/css/style.css
@@ -414,29 +414,42 @@ nav ul li a:hover{
 #BuyTicketSec{
   background-image: url(../images/foto4.jpg);
   background-repeat: no-repeat;
-  padding-top: 16%;
-  padding-bottom: 10%;
+  padding-top: 15%;
+  padding-bottom: 30%;
   width: 100%;
   background-size: cover;
   position: relative;
 }
 #BuyTicketSec .content{
-
+  z-index: 5;
+  float: right;
+  width: 25%;
+  margin-right: 3%;
+}
+#BuyTicketSec h1{
+  text-align: right;
+  font-size: 90px;
+  font-weight: bold;
+  font-family: Raleway-Bold;
+  color: white;
+  z-index: 4;
+  position: relative;
+  display: block;
 }
 #BuyTicketSec span{
-  width: 43%;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   display: block;
-  text-align: center;
+  text-align: right;
   color: white;
   margin-top: 3%;
   font-size: 18px;
   z-index: 4;
   position: relative;
-  opacity: 80%;
+
 }
-#BuyTicketSec div{
+#BuyTicketSec .opblock{
   position: absolute;
   width: 100%;
   height: 100%;
@@ -454,7 +467,7 @@ nav ul li a:hover{
   z-index: 4;
   position: relative;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: 0;
   display: block;
   border: 0;
   font-size: 18px;
@@ -468,4 +481,39 @@ nav ul li a:hover{
   background-color: #01C5FF;
   color: white;
   box-shadow: 0px 0px 10px #01C5FF;
+}
+
+/* ==============TableSec(Section-9)============== */
+
+#TableSec{
+  background-color: #000000;
+  padding: 5% 10%;
+}
+#TableSec table{
+  width: 100%;
+}
+#TableSec h3{
+  color: #00C8FF;
+  font-family: Raleway-Regular;
+  text-align: center;
+  font-weight: 400;
+  margin-top: 10px;
+}
+#TableSec span{
+  color: #009CC7;
+  text-align: center;
+  margin-top: 40px;
+  display: block;
+  line-height: 30px;
+}
+#TableSec td{
+  width: 50%;
+  text-align: center;
+  padding: 100px 100px;
+}
+#TableSec tr td:first-child img{
+  margin-left: 70px;
+}
+#TableSec tr td:last-child img{
+  margin-right: 70px;
 }
