--- a/css/style.css
+++ b/css/style.css
@@ -517,3 +517,50 @@ nav ul li a:hover{
 #TableSec tr td:last-child img{
   margin-right: 70px;
 }
+
+/* ==============Column3Text(Section-10)============== */
+#Column3Text{
+  background-color: #141414;
+  padding: 5% 12%;
+}
+#Column3Text ul {
+  list-style: none;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  text-align: center;
+}
+#Column3Text ul li{
+  display: inline-block;
+  margin: 0 4%;
+  width: 25%;
+}
+#Column3Text ul li h3{
+  color: #eeececf8;
+  font-weight: 500;
+}
+#Column3Text ul li span{
+  color: #eeececf8;
+  width: 100%;
+  margin-top: 5px;
+  display: block;
+  line-height: 25px;
+}
+
+/* ==============JustTextSec2(Section-11)============== */
+#JustTextSec2{
+  background-color: #000000;
+  padding: 6% 20%;
+}
+
+#JustTextSec2 span{
+  color: #009CC7;
+  text-align: center;
+  margin-top: 30px;
+  display: block;
+  line-height: 30px;
+  font-weight: bold;
+}
+#JustTextSec2 .author{
+  font-size: 14px;
+}
