--- a/css/style.css
+++ b/css/style.css
@@ -568,20 +568,12 @@ nav ul li a:hover{
 /* ==============Footer(Section-12)============== */
 #Footer{
   background-color: #141414;
-  padding: 5% 12%;
+  padding: 5% 15%;
   border-bottom: 20px solid #00A0D4;
+  display: flex;
 }
-#Footer ul {
+#Footer ul{
   list-style: none;
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
-  text-align: center;
-}
-#Footer ul li{
-  display: inline-block;
-  margin: 0 4%;
-  width: 25%;
 }
 #Footer ul li h3{
   color: #eeececf8;
@@ -595,9 +587,10 @@ nav ul li a:hover{
   line-height: 25px;
 }
 #Footer .first{ 
-  width: 20%;
+  width: 25%;
   color: white;
   display: inline-block;
+  margin-right: 30%;
 }
 #Footer .first span{ 
   font-size: 14px;
@@ -611,6 +604,10 @@ nav ul li a:hover{
   padding: 0;
   margin-right: 10px;
   margin-left: 0;
+  transition: 0.3s;
+}
+#Footer .first li:hover{
+  opacity: 75%;
 }
 #Footer .first ul{
   text-align: left;
@@ -620,7 +617,26 @@ nav ul li a:hover{
   width: 25px;
 }
 #Footer .second{ 
-  width: 20%;
+  width: 5%;
   color: white;
   display: inline-block;
+  margin-left: 5%;
+  height: auto;
+}
+#Footer .second ul{ 
+  margin-top: 20px;
+}
+#Footer .second li{ 
+  margin-top: 10px;
+}
+#Footer .second li:first-child{ 
+  margin-top: 0px;
+}
+#Footer a{
+  text-decoration: none;
+  color: white;
+  font-size: 14px;
+}
+#Footer a:hover{
+  text-decoration: underline;
 }
